--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,4 @@ framework = arduino
 lib_deps = 
 	adafruit/Adafruit SSD1306@^2.5.15
 	adafruit/Adafruit GFX Library@^1.12.1
+	plageoj/UrlEncode@^1.0.1
