--- a/platformio.ini
+++ b/platformio.ini
@@ -17,5 +17,12 @@ upload_speed = 921600
 lib_deps = 
 	adafruit/Adafruit SSD1306@^2.5.15
 	adafruit/Adafruit GFX Library@^1.12.1
-	plageoj/UrlEncode@^1.0.1
-	bblanchon/ArduinoJson@^7.4.2
+
+[env:nodemcu]
+platform = espressif8266
+board = nodemcu
+framework = arduino
+monitor_speed = 115200
+lib_deps = 
+	adafruit/Adafruit SSD1306@^2.5.15
+	adafruit/Adafruit GFX Library@^1.12.1
